--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,5 @@
 /* CSS declarations go here */
+/*
 body {
   font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -71,3 +72,4 @@ form {
 
 
 }
+*/
